--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <body>
   <center>
-    <h2>Mugesh html file</h2>
+    <h2>Mugesh</h2>
+    <p>Initially available only in English, Wikipedia exists in over 340 languages and is the world's ninth most visited website. The English Wikipedia, with over 7 million articles, remains the largest of the editions, which together comprise more than 65 million articles and attract more than 1.5 billion unique device visits and 13 million edits per month (about 5 edits per second on average) as of April 2024.[W 1] As of September 2025, over 25% of Wikipedia's traffic comes from the United States, while Japan accounts for nearly 7%, and the United Kingdom, Germany and Russia each represent around 5%.[5]</p>
+    <hr>
   </center>
 </body>
